crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__missing_quantifier_filter.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `any(method)`: `any` requires a filter expression: `any(<domain>, <expr>)`",
  "input": "any(method)"
}
