crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__moniker_descendant.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "uri",
      "type": "attr"
    },
    "op": "descendant_of",
    "raw": "moniker <@ code+moniker://./class:Foo",
    "rhs": {
      "segments": {
        "project": ".",
        "segments": [
          {
            "kind": "class",
            "name": "Foo"
          }
        ]
      },
      "type": "moniker"
    },
    "type": "atom"
  }
}
