crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__non_numeric_bare_rhs.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `lines <= forty`: expected number expression, got `forty`",
  "input": "lines <= forty"
}
