crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__non_numeric_rhs.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `lines = 'many'`: number expressions require numeric RHS",
  "input": "lines = 'many'"
}
